# temp-converter

./: .gitlab-ci.yml  .release-plz.toml  Cargo.toml  Justfile  README.adoc  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  release-plz.yml
temp-converter/: CHANGELOG.md  Cargo.toml  README.adoc  README.md
temp-converter-lib/: CHANGELOG.md  Cargo.toml  README.adoc  README.md
temp-converter-lib/src/: lib.rs
temp-converter/src/: cli.rs  float.rs  main.rs
temp-converter/wix/: main.wxs
