[package]
name = "temp-converter-lib"
version = "3.0.2"
edition = "2021"
authors = ["Dalia Rojas Vallejo <daliarojasvallejo@proton.me>"]
categories = ["science", "mathematics"]
keywords = ["temperature", "converter", "units", "library", "no_deps"]
license = "Unlicense"
readme = true
repository = "https://github.com/DavoReds/temp-converter"
description = "Simple terminal temperature unit converter between Celsius, Fahrenheit and Kelvin."
rust-version = "1.59.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"
