[package]
name = "temp-converter"
version = "3.1.3"
edition = "2021"
authors = ["Dalia Rojas Vallejo <daliarojasvallejo@proton.me>"]
categories = ["command-line-utilities", "science", "mathematics"]
keywords = ["cli", "temperature", "converter", "units"]
license = "Unlicense"
readme = true
repository = "https://github.com/DavoReds/temp-converter"
description = "Simple terminal temperature unit converter between Celsius, Fahrenheit and Kelvin."

[package.metadata.wix]
upgrade-guid = "3B8DB142-B486-4DBC-B974-191E14D8D45A"
path-guid = "6DD9A667-6A8B-4410-9B9D-1283F8D8CBC2"
license = false
eula = false

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
clap-stdin = "0.4.0"
temp-converter-lib = { path = "../temp-converter-lib", version = "3.1.2" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"
